# securechain-depex

./: .dockerignore  .gitattributes  .gitignore  .prospector.yaml  CLAUDE.md  Dockerfile  Dockerfile.Init  Dockerfile.dockerignore  README.md  TODO  cve.py  cves.txt  cves2.csv  docker-compose-init.yml  docker-compose.yml  generate_repos.py  info.csv  main.py  minmax.csv  mvn_repos.txt  mvn_repos_ids.txt  mypy.ini  nohup.out  npm_repos.txt  npm_repos_ids.txt  operations.py  operations2.py  pip_repos.txt  pip_repos_ids.txt  prueba.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_mypy.txt  ruff.toml  setup.py  template.env
.github/workflows/: analisys.yml  docker-image-latest.yml  docker-image-release.yml  github-release.yml  js_analysis.yml  lint-test.yml  py_analysis.yml  release.yml  scorecard.yml
.openvex/templates/: main.openvex.json
app/: config.py  constants.py  database.py  dependencies.py  exception_handler.py  http_session.py  logger.py  main.py  router.py  settings.py
app/apis/: __init__.py  git_service.py  github_service.py  gitlab_service.py  manager_service.py  nvd_service.py  pypi_service.py
app/controllers/: __init__.py  assisting_information_vex_controller.py  config_operation_controller.py  cve_controller.py  file_operation_controller.py  generate_controller.py  graph_controller.py  graph_operation_controller.py  graph_to_smt.py  graph_to_smt2.py  health_controller.py  minimize.py  network_controller.py  operation_controller.py  operations.py  package_operation_controller.py  populate_controller.py  sanitizer.py  serialize_controller.py  smt_operation_controller.py  ssc_operation_controller.py  test_report_controller.py  transform.py  update_db_controller.py  updater_controller.py  version_controller.py
app/domain/: __init__.py  repository_initializer.py
app/exceptions/: __init__.py  date_not_found_exception.py  exceptions.py  expired_token_exception.py  invalid_repository_exception.py  invalid_token_exception.py  memory_out_exception.py  not_authenticated_exception.py  smt_timeout_exception.py
app/managers/: pypi.py
app/models/: __init__.py  (+12 more)
backend/: .gitignore  Dockerfile  requirements.txt
dev/: Dockerfile  docker-compose.yml
frontend/: Dockerfile  package-lock.json  package.json
mongo_seed/: import.sh
seeds/: graphdb_seeder.bat  graphdb_seeder.sh  vulndb_seeder.bat  vulndb_seeder.sh
tests/: __init__.py  conftest.py
(+359 files in other folders)
